trying to fix header and spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,10 +44,13 @@ body {
  */
 .masthead {
   margin-bottom: 2rem;
+  justify-content: center;
 }
 
 .masthead-brand {
   margin-bottom: 0;
+  color: rgb(17, 163, 127);
+
   /* border: solid 3px rgb(17, 163, 127); */
 }
 
@@ -62,7 +65,7 @@ body {
 
 .navbox .navlink:hover,
 .navbox .navlink:focus {
-  border-bottom-color: rgba(255, 255, 255, .25);
+  border-bottom-color: rgb(117, 17, 163);
 }
 
 .navbox .navlink + .navlink {
@@ -73,10 +76,13 @@ body {
   color: rgb(117, 17, 163);
   border-bottom-color: rgb(17, 163, 127);
 }
+.navlink:active {
+  color: rgb(255, 30, 68);
+}
 
 @media (min-width: 48em) {
   .masthead-brand {
-    float: center;
+    float: left;
   }
   .navbox {
     float: right;
